--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "dev:tsc": "tsc --watch -p .",
     "dev:serve": "nodemon -e js -w dist dist/main.js",
-    "dev": "run-p dev:*"
+    "dev": "run-p dev:*",
+    "test": "jest",
+    "tdd": "npx jest --watch"
   },
   "devDependencies": {
     "@types/hapi__hapi": "^20.0.9",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.10.2",
+    "jest": "^27.2.4",
     "nodemon": "^2.0.13",
     "npm-run-all": "^4.1.5",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
   },
   "dependencies": {
@@ -20,5 +25,6 @@
   },
   "engines": {
     "node": "16.10"
-  }
+  },
+  "test": "jest"
 }
