--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "react-ssr-poc",
   "version": "1.0.0",
-  "main": "dist/main.js",
+  "main": "dist/server/main.js",
   "license": "MIT",
   "scripts": {
-    "dev:tsc": "tsc --watch -p .",
-    "dev:server": "nodemon -e js -w dist dist/main.js",
+    "dev:tsc": "tsc --project tsconfig.server.json --watch",
+    "dev:server": "nodemon -e js -w dist dist/server.js",
     "dev": "run-p dev:*",
     "test": "jest",
     "tdd": "npx jest --watch",
-    "build:server": "webpack --config webpack.config.server.js"
+    "build:server": "webpack --config webpack.config.server.js",
+    "build:client": "webpack --config webpack.config.client.js"
   },
   "devDependencies": {
     "@types/hapi__hapi": "^20.0.9",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.2",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
+    "clean-webpack-plugin": "^4.0.0",
     "jest": "^27.2.4",
     "nodemon": "^2.0.13",
     "npm-run-all": "^4.1.5",
@@ -23,10 +27,13 @@
     "typescript": "^4.4.3",
     "webpack": "^5.56.0",
     "webpack-cli": "^4.8.0",
+    "webpack-manifest-plugin": "^4.0.2",
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "@hapi/hapi": "^20.2.0"
+    "@hapi/hapi": "^20.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "engines": {
     "node": "16.10"
