--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "build:client": "webpack --config webpack.config.client.js"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.0",
     "@types/hapi__hapi": "^20.0.9",
+    "@types/hapi__inert": "^5.2.3",
+    "@types/hapi__vision": "^5.5.3",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.0.1",
     "jest": "^27.2.4",
     "nodemon": "^2.0.13",
     "npm-run-all": "^4.1.5",
@@ -32,6 +36,9 @@
   },
   "dependencies": {
     "@hapi/hapi": "^20.2.0",
+    "@hapi/inert": "^6.0.4",
+    "@hapi/vision": "^6.1.0",
+    "ejs": "^3.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
